crates/aranya-policy-compiler/tests/data/functions/already_defined.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: the name `f` is defined multiple times
  |
1 | function f(x int) int {
  |          - previous defintion here
...
5 | function f() int {}
  |          ^ re-defined here
